Fix bugs: double scroll in preview, validation messages on input creadentials for comment form, save new lines and whitespaces for comments

--- a/sources/easygenerator.Web/Content/common.less
+++ b/sources/easygenerator.Web/Content/common.less
@@ -177,7 +177,6 @@ input::-moz-focus-inner {
 /*#region COMMON TAGS CSS-STYLES*/
 
 html {
-    overflow-y: hidden;
     height: 100%;
     width: 100%;
     overflow-y: scroll;
