--- a/sources/easygenerator.Web/Content/panels.less
+++ b/sources/easygenerator.Web/Content/panels.less
@@ -302,6 +302,10 @@
                 color: @main-text-color;
                 -ms-word-wrap: break-word;
                 word-wrap: break-word;
+
+                span {
+                    white-space: pre-wrap;
+                }
             }
 
             .comment-user {
