--- a/sources/easygenerator.Web/Content/review.less
+++ b/sources/easygenerator.Web/Content/review.less
@@ -1,5 +1,9 @@
 ﻿@focus-border-color: rgba(0, 168, 255, 0.75);
 
+html {
+    overflow-y: hidden;
+}
+
 html, body, iframe, div {
     margin: 0;
     padding: 0;
